--- a/sass/_reset.scss
+++ b/sass/_reset.scss
@@ -100,5 +100,5 @@ body {
   background-image: url('../assets/galaxy-space-scene.jpg');
   background-repeat: repeat-y;
   background-size: cover;
-  background-position: center center;
+  background-position: center left;
 }
