--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ body {
   background-image: url("../assets/galaxy-space-scene.jpg");
   background-repeat: repeat-y;
   background-size: cover;
-  background-position: center center;
+  background-position: center left;
 }
 
 .header {
@@ -108,7 +108,6 @@ body {
   align-items: flex-start;
   gap: 4rem;
   margin-top: 1.6rem;
-  min-height: 10vh;
 }
 .header__logo {
   width: 2.5em;
@@ -136,13 +135,15 @@ body {
 }
 @media only screen and (min-width: 769px) and (max-width: 1200px) {
   .header {
-    margin: 0.8rem auto 1.6rem;
+    margin: 3.2rem auto 1.6rem;
+    gap: 0;
   }
 }
 @media only screen and (min-width: 1201px) {
   .header {
-    margin: 0.8rem auto 1.6rem;
+    margin: 3.2rem auto 1.6rem;
     max-width: 120rem;
+    gap: 0;
   }
 }
 
@@ -155,7 +156,6 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 60vh;
   font-size: 1.6rem;
 }
 .main .start {
@@ -714,24 +714,14 @@ body {
   height: 3rem;
   border: none;
   text-align: center;
-  color: var(--primary-color);
+  color: var(--white-color);
   visibility: hidden;
 }
 .main .word__random .letter__line {
   width: 3rem;
   height: 0.4rem;
-  background-color: var(--primary-color);
+  background-color: var(--white-color);
   border-radius: 0.2rem;
-}
-@media only screen and (min-width: 769px) and (max-width: 1200px) {
-  .main .word__random {
-    margin-bottom: 5rem;
-  }
-}
-@media only screen and (min-width: 1201px) {
-  .main .word__random {
-    margin-bottom: 5rem;
-  }
 }
 .main .word .abc {
   display: flex;
@@ -1013,6 +1003,7 @@ body {
     flex-direction: row;
     justify-content: space-between;
     width: 431.08px;
+    gap: 5rem;
   }
 }
 @media only screen and (min-width: 769px) and (max-width: 1200px) {
@@ -1033,11 +1024,13 @@ body {
 @media only screen and (min-width: 769px) and (max-width: 1200px) {
   .main {
     flex-direction: row;
+    justify-content: center;
   }
 }
 @media only screen and (min-width: 1201px) {
   .main {
     flex-direction: row;
+    justify-content: center;
   }
 }
 
@@ -1047,7 +1040,6 @@ body {
   justify-content: center;
   align-items: center;
   font-size: 1rem;
-  min-height: 10vh;
   color: var(--white-color);
   gap: 1rem;
   margin-top: 5rem;
