--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -4,7 +4,7 @@
   @include mixfun.flex(flex, column, center, flex-start);
   gap: 4rem;
   margin-top: 1.6rem;
-  min-height: 10vh;
+  // min-height: 10vh;
 
   &__logo {
     width: 2.5em;
@@ -31,11 +31,13 @@
   }
 
   @include mixfun.medium() {
-    margin: .8rem auto 1.6rem;
+    margin: 3.2rem auto 1.6rem;
+    gap: 0;
   }
 
   @include mixfun.large() {
-    margin: .8rem auto 1.6rem;
+    margin: 3.2rem auto 1.6rem;
     max-width: 120rem;
+    gap: 0;
   }
 }
